services/payment/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-payment
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8084
    - name: grpc
      port: 9094
      targetPort: 9094
  selector:
    app: shopee-payment
